--- a/ansible/templates/pgpool.j2
+++ b/ansible/templates/pgpool.j2
@@ -339,7 +339,7 @@ statement_level_load_balance = off
 # MASTER/SLAVE MODE
 #------------------------------------------------------------------------------
 
-master_slave_mode = off
+master_slave_mode = on
                                    # Activate master/slave mode
                                    # (change requires restart)
 master_slave_sub_mode = 'stream'
