Huge oversight of missing config generation for psql nodes

--- a/ansible/templates/pgpool.j2
+++ b/ansible/templates/pgpool.j2
@@ -339,10 +339,10 @@ statement_level_load_balance = off
 # MASTER/SLAVE MODE
 #------------------------------------------------------------------------------
 
-master_slave_mode = on
+master_slave_mode = off
                                    # Activate master/slave mode
                                    # (change requires restart)
-master_slave_sub_mode = 'stream'
+#master_slave_sub_mode = 'stream'
                                    # Master/slave sub mode
                                    # Valid values are combinations stream, slony
                                    # or logical. Default is stream.
