--- a/ansible/templates/postgresql.j2
+++ b/ansible/templates/postgresql.j2
@@ -2,36 +2,6 @@
 # PostgreSQL configuration file
 # -----------------------------
 #
-# This file consists of lines of the form:
-#
-#   name = value
-#
-# (The "=" is optional.)  Whitespace may be used.  Comments are introduced with
-# "#" anywhere on a line.  The complete list of parameter names and allowed
-# values can be found in the PostgreSQL documentation.
-#
-# The commented-out settings shown in this file represent the default values.
-# Re-commenting a setting is NOT sufficient to revert it to the default value;
-# you need to reload the server.
-#
-# This file is read on server startup and when the server receives a SIGHUP
-# signal.  If you edit the file on a running system, you have to SIGHUP the
-# server for the changes to take effect, run "pg_ctl reload", or execute
-# "SELECT pg_reload_conf()".  Some parameters, which are marked below,
-# require a server shutdown and restart to take effect.
-#
-# Any parameter can also be given as a command-line option to the server, e.g.,
-# "postgres -c log_connections=on".  Some parameters can be changed at run time
-# with the "SET" SQL command.
-#
-# Memory units:  B  = bytes            Time units:  us  = microseconds
-#                kB = kilobytes                     ms  = milliseconds
-#                MB = megabytes                     s   = seconds
-#                GB = gigabytes                     min = minutes
-#                TB = terabytes                     h   = hours
-#                                                   d   = days
-
-
 #------------------------------------------------------------------------------
 # FILE LOCATIONS
 #------------------------------------------------------------------------------
@@ -61,11 +31,11 @@ listen_addresses = '*'
 					# comma-separated list of addresses;
 					# defaults to 'localhost'; use '*' for all
 					# (change requires restart)
-port = 5432				# (change requires restart)
-max_connections = 100			# (change requires restart)
-#superuser_reserved_connections = 3	# (change requires restart)
+port = 5432								# (change requires restart)
+max_connections = 100					# (change requires restart)
+#superuser_reserved_connections = 3		# (change requires restart)
 unix_socket_directories = '/var/run/postgresql'	# comma-separated list of directories
-					# (change requires restart)
+												# (change requires restart)
 #unix_socket_group = ''			# (change requires restart)
 #unix_socket_permissions = 0777		# begin with 0 to use octal notation
 					# (change requires restart)
@@ -92,7 +62,7 @@ unix_socket_directories = '/var/run/postgresql'	# comma-separated list of direct
 
 # - Authentication -
 
-#authentication_timeout = 1min		# 1s-600s
+#authentication_timeout = 1min			# 1s-600s
 #password_encryption = scram-sha-256	# scram-sha-256 or md5
 #db_user_namespace = off
 
@@ -202,19 +172,24 @@ dynamic_shared_memory_type = posix	# the default is the first option
 
 # - Settings -
 
-#wal_level = replica			# minimal, replica, or logical
-					# (change requires restart)
-#fsync = on				# flush data to disk for crash safety
+#fsync = on			# flush data to disk for crash safety
 					# (turning this off can cause
 					# unrecoverable data corruption)
+
 {% if inventory_hostname == "postgresql-1" %}
-#synchronous_commit = remote_apply
-#wal_log_hints = on			# also do full page writes of non-critical updates
+
+wal_level = replica
+synchronous_commit = on
+wal_log_hints = on			
+
 {% else %}
-#synchronous_commit = on		# synchronization level;
-#wal_log_hints = off			# also do full page writes of non-critical updates
+
+#wal_level = replica
+#synchronous_commit = remote_apply		
+#wal_log_hints = off			
+
 {% endif %}
-					# off, local, remote_write, remote_apply, or on
+								
 #wal_sync_method = fsync		# the default is the first option
 					# supported by the operating system:
 					#   open_datasync
@@ -248,7 +223,12 @@ min_wal_size = 80MB
 
 # - Archiving -
 
-#archive_mode = off		# enables archiving; off, on, or always
+{% if inventory_hostname == "postgresql-1" %}
+#archive_mode = on		# enables archiving; off, on, or always
+{% else %}
+#archive_mode = on		# enables archiving; off, on, or always
+{% endif %}
+
 				# (change requires restart)
 #archive_command = ''		# command to use to archive a logfile segment
 				# placeholders: %p = path of file to archive
@@ -301,13 +281,13 @@ min_wal_size = 80MB
 
 # Set these on the primary and on any standby that will send replication data.
 
-#max_wal_senders = 10		# max number of walsender processes
+max_wal_senders = 5		# max number of walsender processes
 				# (change requires restart)
 #max_replication_slots = 10	# max number of replication slots
 				# (change requires restart)
 #wal_keep_size = 0		# in megabytes; 0 disables
 #max_slot_wal_keep_size = -1	# in megabytes; -1 disables
-#wal_sender_timeout = 60s	# in milliseconds; 0 disables
+wal_sender_timeout = 60s	# in milliseconds; 0 disables
 #track_commit_timestamp = off	# collect timestamp of transaction commit
 				# (change requires restart)
 
@@ -316,7 +296,7 @@ min_wal_size = 80MB
 # These settings are ignored on a standby server.
 
 {% if inventory_hostname == "postgresql-1" %}
-#synchronous_standby_names = '*'
+synchronous_standby_names = '*'
 {% else %}
 #synchronous_standby_names = ''	# standby servers that provide sync rep
 {% endif %}
@@ -335,10 +315,12 @@ min_wal_size = 80MB
 
 {% if inventory_hostname != "postgresql-1" %}
 #promote_trigger_file = '/tmp/tango-down.trigger'
-hot_standby = on			# "off" disallows queries during recovery
+standby_mode = on
+hot_standby = on			
 {% else %}
 #promote_trigger_file = ''		# file name whose presence ends recovery
-#hot_standby = on			# "off" disallows queries during recovery
+#hot_standby = on		
+#standby_mode = on	
 {% endif %}
 
 					# (change requires restart)
@@ -348,13 +330,21 @@ hot_standby = on			# "off" disallows queries during recovery
 #max_standby_streaming_delay = 30s	# max delay before canceling queries
 					# when reading streaming WAL;
 					# -1 allows indefinite delay
-#wal_receiver_create_temp_slot = off	# create temp slot if primary_slot_name
-					# is not set
+
 #wal_receiver_status_interval = 10s	# send replies at least this often
 					# 0 disables
 #hot_standby_feedback = off		# send info from standby to prevent
 					# query conflicts
+
+{% if inventory_hostname != "postgresql-1" %}
+wal_receiver_timeout = 60s		# time that receiver waits for
+wal_receiver_create_temp_slot = on	# create temp slot if primary_slot_name
+					# is not set
+{% else %}
 #wal_receiver_timeout = 60s		# time that receiver waits for
+#wal_receiver_create_temp_slot = off	# create temp slot if primary_slot_name
+					# is not set
+{% endif %}
 					# communication from primary
 					# in milliseconds; 0 disables
 #wal_retrieve_retry_interval = 5s	# time to wait before retrying to
