--- a/ansible/templates/pgpool.j2
+++ b/ansible/templates/pgpool.j2
@@ -341,10 +341,10 @@ statement_level_load_balance = on
 # MASTER/SLAVE MODE
 #------------------------------------------------------------------------------
 
-master_slave_mode = off
+master_slave_mode = on
                                    # Activate master/slave mode
                                    # (change requires restart)
-#master_slave_sub_mode = 'stream'
+master_slave_sub_mode = 'stream'
                                    # Master/slave sub mode
                                    # Valid values are combinations stream, slony
                                    # or logical. Default is stream.
